controller/pkg/agentgateway/translator/testdata/backends/backendtlspolicy-invalid-client-cert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: basic
  namespace: default
spec:
  gatewayClassName: agentgateway
  tls:
    backend:
      clientCertificateRef:
        group: ""
        kind: Secret
        name: missing-client-cert
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: infra-backend
  namespace: default
spec:
  ports:
    - name: https
      port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: invalid-client-cert
  namespace: default
spec:
  targetRefs:
    - name: infra-backend
      kind: Service
      group: ""
      sectionName: https
  validation:
    hostname: example.com
    wellKnownCACertificates: System
---
# Output
output:
- gateway:
    Name: basic
    Namespace: default
  resource:
    policy:
      backend:
        backendTls:
          cert: aW52YWxpZA==
          hostname: example.com
          key: aW52YWxpZA==
      key: default/invalid-client-cert:backend-tls:default/infra-backend.default.svc.cluster.local/443
      name:
        kind: BackendTLSPolicy
        name: invalid-client-cert
        namespace: default
      target:
        service:
          hostname: infra-backend.default.svc.cluster.local
          namespace: default
          port: 443
- canonical: true
  hostname: infra-backend.default.svc.cluster.local
  name: infra-backend
  namespace: default
  ports:
  - appProtocol: TLS
    servicePort: 443
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: BackendTLSPolicy
  metadata:
    name: invalid-client-cert
    namespace: default
  spec: null
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: basic
      conditions:
      - lastTransitionTime: fake
        message: Gateway.spec.tls.backend.clientCertificateRef Secret not found
        reason: Invalid
        status: "False"
        type: Accepted
      - lastTransitionTime: fake
        message: Configuration is valid
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: agentgateway.dev/agentgateway
